# roman_notebooks

./: .buildinfo  .gitignore  CITATION.cff  README.html  README.md  _config.yml  _toc.yml  ci_config.txt  genindex.html  index.rst  intro.html  intro.md  notebooks  objects.inv  pyproject.toml  refdata_dependencies.yaml  search.html  searchindex.js  toc.py
.github/workflows/: notebook-merge.yml  notebook-on-demand.yml  notebook-pr.yml  notebook-scheduled.yml  release.yaml  semver-version-bump.yaml
_sources/: README.md
_sources/markdown/: simulated-data.md  tutorials.md
content/: intro.md
markdown/: credit_monitor.md  install-software.md  jupyter.md  local-run.html  local-run.md  roman-intro.md  server.md  simulated-data.html  simulated-data.md  software-installed.md  software.md  teams.md  tutorials.html  tutorials.md  what-is-rrn.md  what-is-rsp.md  workflows.md
markdown/workflows/: Intro_Workflow.md  crds-reference-files.md  intro-workflow.md  wfi-data-analysis.html  wfi-data-analysis.md  wfi-data-sim.md  wfi-obs-plan.html  wfi-obs-plan.md
notebooks/aperture_photometry/: aperture_photometry.html  aperture_photometry.ipynb  notebook_data_dependencies.py  requirements.txt
notebooks/astrocut/: requirements.txt
notebooks/background_visualization_tool/: RBVT.html  RBVT.ipynb  requirements.txt
notebooks/catalog_database_access/: catalog_database_access.html  catalog_database_access.ipynb  requirements.txt
notebooks/ccs_simulations/: ccs_simulations.html  (+3 more)
shared/: ci_data_dependencies.py  notebook_data_dependencies.py  notebook_data_dependencies_rev1.py
(+240 files in other folders)
